stable/istiosisit/templates/authentication.yaml
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   namespace: default
#   name: streams-policy
# spec:
#  selector:
#    matchLabels:
#      component: streams
#  action: DENY
#  rules:
#  - when:
#     - key: request.auth.claims[iss]
#       values: ["authservice"]
  # - when:
  #   - key: request.auth.claims[iss]
  #     values: ["authservc"]
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: streams
# spec:
#   selector:
#     matchLabels:
#       component: stremas
#   action: DENY
#   rules:
#   - from:
#         - source:
#             notRequestPrincipals: ["*"]
#   - to:
#     - operation:
#         methods: ["GET"]
#         paths: ["/api/streams/matches"]
#     when:
#     - key: request.auth.claims[is_streamer]
#       values: ["false"]
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: app-without-jwt
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       name: auth
#   action: ALLOW
#   rules:
#   - to:
#     - operation:
#         methods: ["GET", "HEAD", "POST"]
#         paths: ["/api/user/*"]
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: streams-policy
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       component: streams
#   action: DENY
#   rules:
#   - from:
#     - source:
#         notRequestPrincipals: ["*"]
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: streams-policy
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       component: stremas
#   action: ALLOW
#   rules:
#   - to:
#     - operation:
#         methods: ["GET"]
#         paths: ["/api/streams/*"]
#     when:
#     - key: request.auth.claims[iss]
#       values: ["https://accounts.google.com"]
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: apps
spec:
  selector:
    matchLabels:
      app: streams
  jwtRules:
  - issuer: authservice
    jwks: '{ "keys":[ {"kty": "RSA","n": "ytznnUQzlCX8W3ek3h3U0063EpIW3uqe2fOyHu4No3aV4QkonsPeUd6CP0xloS8nSij40-W3yRVEjSzJRbj3iVy7ZDKm2nYjk5U7Wx8IKaKrG6v0qPOAp8Bc37bp4d7kcjFHtvRAJDq8yBdCMMlgT99yhUMp6HoXtw5IDlbzL5nend4eKJuAHzgCCbQEK2yhpsrqIYJD04bQqRmYAVUsjRFlyC6LYUWeQ_EVkQPaLUi9mbMjGwzE2EDU9bPbIOTu_aPLxAlM0L6B4neQFZ4E3MNVQCpgm2MhmNuSful_KCBM62HsvX4NYaPXZDzOkoBffsKWb5ucgMmwEBbUlUghei9GeMtKL_cf8Cr_uWnQzHMbiH9nvm7Eg_8gKIWASVnb3SWOLFjQgRBn9_lBbgac8TEcbUiYbbKlsFzjNxwbRF0XbUr6N_sNBuSDHm9ZO22ib8ULC8xOwL [...]
    forwardOriginalToken: True

---
