stable/istiosisit/templates/virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streams
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - internal-gw/ilb-gateway
  http:
  - match:
    - uri:
        prefix: /api/streams
    route:
    - destination:
        port:
          number: 9001
        host: streams-service.apps.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - internal-gw/ilb-gateway
  http:
  - match:
    - uri:
        prefix: /api/user
    route:
    - destination:
        port:
          number: 9000
        host: auth-service.apps.svc.cluster.local
---
